Fix alignment of username with navbar
Fixes #138

--- a/imagespace/web_external/stylesheets/layout.styl
+++ b/imagespace/web_external/stylesheets/layout.styl
@@ -10,10 +10,10 @@ $headerHeight = 50px
         color white
 
 .h-user-link
-    font-size 16px
+    font-size 14px
 
 .h-login-link-wrapper
-    font-size 16px
+    font-size 14px
 
 .h-user-link-wrapper
     display inline-block
